examples/test/testpolicy3016.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3016
  namespace: namespace88
spec:
  podSelector:
    matchLabels:
      key49: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value41
          key24: value46
      podSelector:
        matchLabels:
          key41: value6
          key34: value15
